--- a/SeleniumInCSharp/POMExample/POMExample/Test_Execution_Reports/index.html
+++ b/SeleniumInCSharp/POMExample/POMExample/Test_Execution_Reports/index.html
@@ -53,7 +53,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">3/26/2019 2:48:40 PM</span>
+                    <span class="badge badge-primary">3/26/2019 5:26:38 PM</span>
                 </a>
             </li>
         </ul>
@@ -108,7 +108,7 @@
 											<i class="fa fa-exclamation-circle"></i>
 										</a>
 										<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>											<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																																																							<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																																																		<div class="dropdown-divider"></div>
 											<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 										</ul>
 									</li>
@@ -116,94 +116,25 @@
                             </div>
                             <div class="test-list-wrapper scrollable">
                                 <ul class="test-list-item">
-										<li class="test-item" status="fail" author="" device="" tag=""> 
-											<div class="status-avatar fail-bg">
-												<i class="fa fa-times text-white"></i>
-											</div>
-											<div class="open-test">
-												<div class="test-detail"> 
-													<p class="name">SearchTextFormAboutPage</p> 
-													<p class="duration text-sm">0h:0m:16s+455ms</p> 
-													<span class="datetime">14:48:40 PM</span>
-												</div>
-											</div>
-											<div class="test-contents d-none">
-												<div class="detail-head">
-													<div class="p-v-10 d-inline-block">	
-														<div class="info">
-															<h5 class="test-status text-fail">SearchTextFormAboutPage</h5>
-															<span class='badge badge-success'>3/26/2019 2:48:40 PM</span>
-															<span class='badge badge-danger'>3/26/2019 2:48:57 PM</span>
-															<span class='badge badge-default'>0h:0m:16s+455ms</span>
-														</div>
-																											</div>
-												</div>
-<div class="detail-body mt-4">												
-	
-<table class="table table-sm">
-	<thead><tr>
-		<th class="status-col">Status</th>
-		<th class="timestamp-col">Timestamp</th>
-		<th class="details-col">Details</th>
-	</tr></thead>
-	<tbody>
-			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>14:48:57</td>
-				<td>
-Test ended with Fail –   Expected string length 21 but was 5. Strings differ at index 0.
-  Expected: "Software Test Academy", ignoring case
-  But was:  "About"
-  -----------^
-
-   at POMExample.TestClass.SearchTextFormAboutPage() in C:\mycode\dotnet\SeleniumInCSharp\POMExample\POMExample\TestCases\TestClass.cs:line 96									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-times text-fail"></i></td>
-				<td>14:48:57</td>
-				<td>
-Snapshot below: AventStack.ExtentReports.ExtentTest									</td>
-			</tr>
-	</tbody>
-</table>
-
-</div>    
-<div class="detail-foot">
-	<ul class="attachments">
-		<li>
-			<a href="file:///C:/mycode/dotnet/SeleniumInCSharp/POMExample/POMExample/\Defect_Screenshots\SearchTextFormAboutPage.png" data-featherlight="image">
-				<div class="file-icon">
-					<i class="fa fa-file-image-o"></i> 
-				</div>
-				<div class="file-info">
-		                <span class="file-name">SearchTextFormAboutPage.png</span>
-		                <span class="file-size"> 0Kb</span>
-				</div>
-			</a>
-		</li>
-	</ul>
-</div>
-											</div>
-										</li>
 										<li class="test-item" status="pass" author="" device="" tag=""> 
 											<div class="status-avatar pass-bg">
 												<i class="fa fa-check text-white"></i>
 											</div>
 											<div class="open-test">
 												<div class="test-detail"> 
-													<p class="name">SearchTextFormAboutPage2("silku","0")</p> 
-													<p class="duration text-sm">0h:0m:20s+605ms</p> 
-													<span class="datetime">14:49:00 PM</span>
+													<p class="name">SearchTextFormAboutPage("silku"," 0")</p> 
+													<p class="duration text-sm">0h:0m:19s+192ms</p> 
+													<span class="datetime">17:26:39 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
 												<div class="detail-head">
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
-															<h5 class="test-status text-pass">SearchTextFormAboutPage2("silku","0")</h5>
-															<span class='badge badge-success'>3/26/2019 2:49:00 PM</span>
-															<span class='badge badge-danger'>3/26/2019 2:49:20 PM</span>
-															<span class='badge badge-default'>0h:0m:20s+605ms</span>
+															<h5 class="test-status text-pass">SearchTextFormAboutPage("silku"," 0")</h5>
+															<span class='badge badge-success'>3/26/2019 5:26:39 PM</span>
+															<span class='badge badge-danger'>3/26/2019 5:26:58 PM</span>
+															<span class='badge badge-default'>0h:0m:19s+192ms</span>
 														</div>
 																											</div>
 												</div>
@@ -218,7 +149,93 @@ Snapshot below: AventStack.ExtentReports.ExtentTest									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>14:49:20</td>
+				<td>17:26:58</td>
+				<td>
+Test ended with Pass									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">SearchTextFormAboutPage("joi"," 7")</p> 
+													<p class="duration text-sm">0h:0m:20s+235ms</p> 
+													<span class="datetime">17:26:58 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-pass">SearchTextFormAboutPage("joi"," 7")</h5>
+															<span class='badge badge-success'>3/26/2019 5:26:58 PM</span>
+															<span class='badge badge-danger'>3/26/2019 5:27:18 PM</span>
+															<span class='badge badge-default'>0h:0m:20s+235ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>17:27:18</td>
+				<td>
+Test ended with Pass									</td>
+			</tr>
+	</tbody>
+</table>
+
+</div>    
+											</div>
+										</li>
+										<li class="test-item" status="pass" author="" device="" tag=""> 
+											<div class="status-avatar pass-bg">
+												<i class="fa fa-check text-white"></i>
+											</div>
+											<div class="open-test">
+												<div class="test-detail"> 
+													<p class="name">SearchTextFormAboutPage2("silku","0")</p> 
+													<p class="duration text-sm">0h:0m:21s+691ms</p> 
+													<span class="datetime">17:27:21 PM</span>
+												</div>
+											</div>
+											<div class="test-contents d-none">
+												<div class="detail-head">
+													<div class="p-v-10 d-inline-block">	
+														<div class="info">
+															<h5 class="test-status text-pass">SearchTextFormAboutPage2("silku","0")</h5>
+															<span class='badge badge-success'>3/26/2019 5:27:21 PM</span>
+															<span class='badge badge-danger'>3/26/2019 5:27:43 PM</span>
+															<span class='badge badge-default'>0h:0m:21s+691ms</span>
+														</div>
+																											</div>
+												</div>
+<div class="detail-body mt-4">												
+	
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>17:27:43</td>
 				<td>
 Test ended with Pass									</td>
 			</tr>
@@ -235,8 +252,8 @@ Test ended with Pass									</td>
 											<div class="open-test">
 												<div class="test-detail"> 
 													<p class="name">SearchTextFormAboutPage2("joi","7")</p> 
-													<p class="duration text-sm">0h:0m:24s+803ms</p> 
-													<span class="datetime">14:49:20 PM</span>
+													<p class="duration text-sm">0h:0m:19s+374ms</p> 
+													<span class="datetime">17:27:43 PM</span>
 												</div>
 											</div>
 											<div class="test-contents d-none">
@@ -244,9 +261,9 @@ Test ended with Pass									</td>
 													<div class="p-v-10 d-inline-block">	
 														<div class="info">
 															<h5 class="test-status text-pass">SearchTextFormAboutPage2("joi","7")</h5>
-															<span class='badge badge-success'>3/26/2019 2:49:20 PM</span>
-															<span class='badge badge-danger'>3/26/2019 2:49:45 PM</span>
-															<span class='badge badge-default'>0h:0m:24s+803ms</span>
+															<span class='badge badge-success'>3/26/2019 5:27:43 PM</span>
+															<span class='badge badge-danger'>3/26/2019 5:28:02 PM</span>
+															<span class='badge badge-default'>0h:0m:19s+374ms</span>
 														</div>
 																											</div>
 												</div>
@@ -261,7 +278,7 @@ Test ended with Pass									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>14:49:45</td>
+				<td>17:28:02</td>
 				<td>
 Test ended with Pass									</td>
 			</tr>
